--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.1.2
+  web_socket_channel: ^2.1.0
+  go_router: 7.1.1 
+  network_info_plus: ^3.0.1  
 
 dev_dependencies:
   flutter_test:
