--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   web_socket_channel: ^2.1.0
+  encrypt: ^5.0.1
   go_router: 7.1.1 
   network_info_plus: ^3.0.1  
 
